--- a/index.html
+++ b/index.html
@@ -825,7 +825,7 @@ Extract 2-4 assertions (observed facts/patterns) and 1-3 rules (actionable guida
     <div style={{borderBottom:"1px solid #e8e4e0",padding:"12px 28px",display:"flex",alignItems:"center",justifyContent:"space-between",background:"#D8CEC3"}}>
       <div style={{display:"flex",alignItems:"center",gap:14}}>
         <div style={{display:"flex",flexDirection:"column",alignItems:"flex-start"}}>
-          <img src={"data:image/png;base64," + DANIELI_LOGO} alt="Metinvest" style={{height:34,objectFit:"contain"}}/>
+          <div style={{fontSize:28,fontWeight:700,color:"#1F1F1F",fontFamily:"'IBM Plex Sans', sans-serif",letterSpacing:2,lineHeight:1}}>NEREOS</div>
           <div style={{fontSize:9,color:"#5a5550",fontFamily:FNTM,letterSpacing:2.5,textTransform:"uppercase",marginTop:2,paddingLeft:1}}>Digital Brain</div>
         </div>
       </div>
