--- a/index.html
+++ b/index.html
@@ -583,7 +583,7 @@ You extract structured knowledge from operator narratives. Given free-text input
 
 Extract 2-4 assertions (observed facts/patterns) and 1-3 rules (actionable guidance). Each assertion and rule should be distinct and specific. Set confidence to "Medium" only if the narrative references repeated observations or data; otherwise use "Low".`;
 
-      const response = await fetch("https://api.anthropic.com/v1/messages", {
+      const response = await fetch("/api/claude", {
         method: "POST",
         headers: { "Content-Type": "application/json" },
         body: JSON.stringify({
